fixed sections sizing for width up to 1077px

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1011,6 +1011,12 @@ button:hover {
 		width: 0px;
 		flex: 1 0 auto;
 	}
+
+	@media screen and (1025px<=width) {
+		display: flex;
+		width: 8.5px;
+		flex: 1 0 auto;
+	}
 }
 
 /* //
