--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -41,28 +41,28 @@ li {
 	margin: 0;
 	padding: 0;
 
-	@media screen and (500px<=width) {
+	@media screen and (width>=500px) {
 		display: none;
 	}
 }
 
 .hidden500 {
 	display: none !important;
-	@media only screen and (500px<=width) {
+	@media only screen and (width>=500px) {
 		display: flex !important;
 	}
 }
 
 .hidden688 {
 	display: none !important;
-	@media only screen and (688px<=width) {
+	@media only screen and (width>=688px) {
 		display: flex !important;
 	}
 }
 
 .hidden705 {
 	display: none !important;
-	@media only screen and (705px<=width) {
+	@media only screen and (width>=705px) {
 		display: flex !important;
 	}
 }
@@ -98,7 +98,7 @@ li {
 	overflow-x: hidden;
 	font-family: chirp;
 
-	@media only screen and (500px<=width) {
+	@media only screen and (width>=500px) {
 		flex-direction: row;
 		overflow-x: scroll;
 	}
@@ -120,7 +120,7 @@ li {
 	box-sizing: border-box;
 	background-color: white;
 
-	@media only screen and (500px<=width) {
+	@media only screen and (width>=500px) {
 		flex-direction: column;
 		//top: -0.5px;
 		flex: 1 0 auto;
@@ -137,20 +137,20 @@ li {
 		align-items: center;
 		top: 0;
 	}
-	@media only screen and(600px<=width) {
+	@media only screen and (width>=600px) {
 		padding: 0;
 		width: 88px;
 		border: none;
 	}
 
-	@media only screen and(688px<=width) {
+	@media only screen and (width>=688px) {
 		width: 88px;
 		flex: 1 1 auto;
 		align-items: end;
 		padding: 0 8px;
 	}
 
-	@media only screen and(988px<=width) {
+	@media only screen and (width>=988px) {
 		width: 68px;
 		flex: 1 0 auto;
 		align-items: end;
@@ -159,20 +159,21 @@ li {
 		padding: 0;
 	}
 
-	@media screen and (1008px<=width) {
+	@media screen and (width>=1008px) {
 		width: 88px;
 		flex: 1 0 auto;
 		overflow-y: hidden;
 	}
-	@media screen and (1025px<=width) {
+	@media screen and (width>=1025px) {
 		width: 96.5px;
 		align-items: end;
 	}
-	@media screen and (1078px<=width) {
+	@media screen and (width>=width>=1078px) {
 		width: 88px;
 		align-items: end;
+		//background-color: red;
 	}
-	@media screen and (1265px<=width) {
+	@media screen and (width>=1265px) {
 		width: 275px;
 		align-items: end;
 		padding: 0;
@@ -186,7 +187,7 @@ li {
 	margin: 0;
 	padding: 0;
 
-	@media only screen and (500px<=width) {
+	@media only screen and (width>=500px) {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -194,19 +195,19 @@ li {
 		margin: 0 0 4px 0;
 		/* border:solid red */
 	}
-	@media only screen and (600px<=width) {
+	@media only screen and (width>=600px) {
 		box-sizing: border-box;
 		width: 88px;
 		padding: 0 8px;
 	}
 
-	@media only screen and (688px<=width) {
+	@media only screen and (width>=688px) {
 		padding: 0;
 		width: 72px;
 		/* align-self: flex-end; */
 	}
 
-	@media only screen and(988px<=width) {
+	@media only screen and (width>=988px) {
 		width: 60px;
 		height: unset;
 		padding: 0 4px;
@@ -214,16 +215,16 @@ li {
 		box-sizing: content-box;
 	}
 
-	@media screen and (1008px<=width) {
+	@media screen and (width>=1008px) {
 		width: 88px;
 		padding: 0 8px;
 		box-sizing: border-box;
 	}
-	@media screen and (1025px<=width) {
+	@media screen and (width>=1025px) {
 		width: 88px;
 	}
 
-	@media screen and (1265px<=width) {
+	@media screen and (width>=1265px) {
 		width: 275px;
 		max-width: 275px;
 		padding: 0 8px;
@@ -234,7 +235,7 @@ li {
 	&_twitter-logo-box {
 		display: none;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			width: 100%;
 			height: 56px;
 			min-height: 56px;
@@ -246,7 +247,7 @@ li {
 			box-sizing: border-box;
 		}
 
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			justify-content: start;
 			//padding-left: 12px;
 		}
@@ -255,7 +256,7 @@ li {
 	&_twitter-logo {
 		display: flex;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			width: 50px;
 			height: 30px;
 			border-radius: 0;
@@ -264,12 +265,12 @@ li {
 			fill: rgb(29, 155, 240);
 		}
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			width: fit-content;
 			//margin-left: -1.5px;
 		}
 
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			justify-content: start;
 			padding-left: 11px;
 		}
@@ -284,7 +285,7 @@ li {
 		padding: 0;
 		height: 100%;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			width: 60px;
 			height: 524.25px;
 			flex-direction: column;
@@ -292,7 +293,7 @@ li {
 			margin: 2px 0 4px 0;
 		}
 
-		@media only screen and (600px<=width) {
+		@media only screen and (width>=600px) {
 			width: 100%;
 		}
 	}
@@ -306,16 +307,16 @@ li {
 		width: 100%;
 		height: 50.5px;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			height: 50.25px;
 			padding: 4px;
 		}
 
-		@media only screen and (688px<=width) {
+		@media only screen and (width>=688px) {
 			margin: 0 0;
 		}
 
-		@media only screen and (1265px<=width) {
+		@media only screen and (width>=1265px) {
 			padding: 4px 0;
 		}
 	}
@@ -323,7 +324,7 @@ li {
 	&_li--first-item {
 		@extend .nav_li;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			margin-top: 0;
 		}
 	}
@@ -331,7 +332,7 @@ li {
 	&_li--search-icon {
 		@extend .nav_li;
 
-		/* @media only screen and (988px<=width) {
+		/* @media only screen and (width>=988px) {
 			display: none;
 		} */
 	}
@@ -340,7 +341,7 @@ li {
 		@extend .nav_li;
 		display: none;
 		/*
-		@media only screen and (988px<=width) {
+		@media only screen and (width>=988px) {
 			display: flex;
 		} */
 	}
@@ -351,7 +352,7 @@ li {
 		align-items: center;
 		text-decoration: none;
 
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			width: 100%;
 			justify-content: flex-start;
 			padding-left: 12px;
@@ -378,7 +379,7 @@ li {
 		border-radius: 50%;
 		padding: 8px;
 		overflow: visible;
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			padding: 0;
 			margin-right: 20px;
 		}
@@ -391,7 +392,7 @@ li {
 	&_text {
 		display: none;
 
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			display: flex;
 			font-size: 20px;
 			color: black;
@@ -401,7 +402,7 @@ li {
 
 	/* &_text--selected{
 		@extend .nav_text;
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			font-family: chirpBold;
 		}
 	} */
@@ -412,12 +413,12 @@ button:hover {
 }
 
 .wrappers2 {
-	@media screen and (998px<=width) {
+	@media screen and (width>=998px) {
 		display: flex;
 		width: 100%;
 		justify-content: center;
 	}
-	@media screen and (1265px<=width) {
+	@media screen and (width>=1265px) {
 		display: block;
 		width: 100%;
 	}
@@ -436,7 +437,7 @@ button:hover {
 	padding: 0;
 	//border: solid red;
 
-	@media screen and(500px<=width) {
+	@media screen and (width>=500px) {
 		display: flex;
 		position: relative;
 		justify-content: center;
@@ -452,33 +453,33 @@ button:hover {
 		bottom: initial;
 	}
 
-	@media screen and (600px<=width) {
+	@media screen and (width>=600px) {
 		margin: 16px 0;
 	}
 
-	@media screen and(688px<=width) {
+	@media screen and (width>=688px) {
 		width: 88px;
 		padding: 0;
 		align-self: flex-end;
 		box-sizing: border-box;
 	}
 
-	@media screen and(988px<=width) {
+	@media screen and (width>=988px) {
 		width: 88px;
 		padding: 0;
 		align-self: flex-end;
 		box-sizing: border-box;
 	}
 
-	@media screen and(1008px<=width) {
+	@media screen and (width>=1008px) {
 		width: 68px;
 	}
 
-	@media screen and(1024px<=width) {
+	@media screen and (width>=1024px) {
 		width: 88px;
 	}
 
-	@media screen and(1265px<=width) {
+	@media screen and (width>=1265px) {
 		width: 233.094px;
 		margin-left: 0;
 	}
@@ -494,7 +495,7 @@ button:hover {
 	border-radius: 50%;
 	box-shadow: 0px 1px 8px 1px rgba(101, 119, 134, 0.4);
 
-	@media screen and(500px<=width) {
+	@media screen and (width>=500px) {
 		display: flex;
 		height: 52px;
 		width: 52px;
@@ -504,7 +505,7 @@ button:hover {
 		box-shadow: none;
 	}
 
-	@media screen and(1265px<=width) {
+	@media screen and (width>=1265px) {
 		width: 100%;
 		border-radius: 99px;
 		text-decoration: none;
@@ -513,7 +514,7 @@ button:hover {
 	&_pill-btn-text {
 		display: none;
 
-		@media screen and(1265px<=width) {
+		@media screen and (width>=1265px) {
 			display: inline-block;
 			color: rgb(255, 255, 255);
 			font-size: 17px;
@@ -529,7 +530,7 @@ button:hover {
 	padding: 0;
 	fill: white;
 	position: absolute;
-	@media screen and(1265px<=width) {
+	@media screen and (width>=1265px) {
 		display: none;
 	}
 }
@@ -537,7 +538,7 @@ button:hover {
 .profile-wrapper {
 	display: none;
 
-	@media only screen and (500px<=width) {
+	@media only screen and (width>=500px) {
 		display: flex;
 		min-height: 64px;
 		width: 64px;
@@ -549,23 +550,23 @@ button:hover {
 		//align-self: center;
 	}
 
-	@media screen and(688px<=width) {
+	@media screen and (width>=688px) {
 		width: 72px;
 	}
 
-	@media screen and(988px<=width) {
+	@media screen and (width>=988px) {
 		width: 60px;
 		padding: 0 4px;
 		//box-sizing: border-box;
 	}
 
-	@media screen and (1008px<=width) {
+	@media screen and (width>=1008px) {
 		width: 88px;
 		padding: 0 8px;
 		box-sizing: border-box;
 	}
 
-	@media screen and (1265px<=width) {
+	@media screen and (width>=1265px) {
 		width: 275px;
 		padding: 0 8px;
 		box-sizing: border-box;
@@ -580,7 +581,7 @@ button:hover {
 		align-items: center;
 		//justify-self: center;
 		box-sizing: border-box;
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			justify-content: stretch;
 			height: 65.06px;
 		}
@@ -594,22 +595,21 @@ button:hover {
 		//flex:0 0 auto;
 	}
 
-
 	&_user-info {
 		display: none;
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			display: flex;
 			flex-direction: column;
 			width: 176.25px;
 			//flex:4 0 auto;
 			padding: 0 12px;
-			font-size:15px;
+			font-size: 15px;
 			box-sizing: border-box;
 
-			b{
+			b {
 				padding-bottom: 2px;
-			};
-			div{
+			}
+			div {
 				padding-top: 2px;
 				color: #536471;
 			}
@@ -618,20 +618,20 @@ button:hover {
 
 	span {
 		display: none;
-		@media screen and (1265px<=width) {
+		@media screen and (width>=1265px) {
 			height: 100%;
 			display: flex;
 			box-sizing: border-box;
-			padding: 4px 0px 0 2px ;
+			padding: 4px 0px 0 2px;
 			/* margin: 7.1px 0 0 1px; */
-			font-size:19px;
+			font-size: 19px;
 			align-items: start;
 			letter-spacing: 1px;
 			//flex:1 0 auto
 		}
 	}
 
-	/* @media screen and(688px<=width) {
+	/* @media screen and(688px) {
 		display: none;
 	} */
 }
@@ -652,7 +652,7 @@ button:hover {
 
 	//overflow-y: auto;
 
-	@media only screen and (500px<=width) {
+	@media only screen and (width>=500px) {
 		flex-basis: 0 1 auto;
 		width: 100%;
 		height: max-content;
@@ -663,20 +663,20 @@ button:hover {
 		border-right: var(--main-border-style);
 	}
 
-	@media only screen and (600px<=width) {
+	@media only screen and (width>=600px) {
 		width: 100%;
 		flex: 1 1 auto;
 		border-left: var(--main-border-style);
 		box-sizing: border-box;
 	}
 
-	@media only screen and (688px<=width) {
+	@media only screen and (width>=688px) {
 		width: 600px;
 		flex: 0 1 auto;
 		border-right: var(--main-border-style);
 	}
 
-	@media only screen and (988px<=width) {
+	@media only screen and (width>=988px) {
 		flex: 0 0 auto;
 	}
 }
@@ -697,15 +697,15 @@ button:hover {
 	transition-timing-function: ease-in-out;
 	transition-delay: 0ms;
 
-	@media only screen and (500px<=width) {
+	@media only screen and (width>=500px) {
 		top: -0.5px !important;
 	}
 
-	@media only screen and (600px<=width) {
+	@media only screen and (width>=600px) {
 		top: unset;
 	}
 
-	@media only screen and (688px<=width) {
+	@media only screen and (width>=688px) {
 		max-width: 598px;
 		box-sizing: border-box;
 	}
@@ -720,7 +720,7 @@ button:hover {
 		padding: 0;
 		box-sizing: border-box;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			width: 100%;
 			justify-content: start;
 			align-items: center;
@@ -729,7 +729,7 @@ button:hover {
 	&_text-span {
 		display: none;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			display: inline-block;
 			font-family: chirpBold;
 			font-size: 20px;
@@ -746,7 +746,7 @@ button:hover {
 		border-radius: 50%;
 		padding: 0;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			display: none;
 		}
 	}
@@ -758,7 +758,7 @@ button:hover {
 		margin: 0;
 		padding: 0;
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			display: none;
 		}
 	}
@@ -771,7 +771,7 @@ button:hover {
 		flex: 1 1 auto;
 		fill: rgb(29, 155, 240);
 
-		@media only screen and (500px<=width) {
+		@media only screen and (width>=500px) {
 			display: none;
 		}
 	}
@@ -842,7 +842,7 @@ button:hover {
 			font-family: chirpBold;
 			color: black;
 			justify-self: center;
-			@media screen and (500px<=width) {
+			@media screen and (width>=500px) {
 				margin-top: 1px;
 			}
 		}
@@ -855,7 +855,7 @@ button:hover {
 			border-radius: 99px;
 			border: none;
 
-			@media screen and (500px<=width) {
+			@media screen and (width>=500px) {
 				margin: auto 0 0 0;
 			}
 		}
@@ -1003,12 +1003,12 @@ button:hover {
 
 .custom-containers-margin {
 	display: none;
-	@media screen and (988px<=width) {
+	@media screen and (width>=988px) {
 		display: flex;
 		width: 20px;
 	}
 
-	@media screen and (1078px<=width) {
+	@media screen and (width>=1078px) {
 		display: flex;
 		width: 30px;
 	}
@@ -1017,7 +1017,7 @@ button:hover {
 .right-container {
 	display: none;
 
-	@media screen and(688px<=width) {
+	@media screen and (width>=688px) {
 		position: sticky;
 		top: 0;
 		display: flex;
@@ -1026,7 +1026,7 @@ button:hover {
 		flex-direction: column;
 	}
 
-	@media screen and(988px<=width) {
+	@media screen and (width>=988px) {
 		width: 290px;
 		flex: 0 0 auto;
 		margin-right: 10px;
@@ -1036,7 +1036,7 @@ button:hover {
 		box-sizing: border-box;
 	}
 
-	@media screen and(1078px<=width) {
+	@media screen and (width>=1078px) {
 		max-width: 350px;
 		width: 350px;
 	}
@@ -1044,7 +1044,7 @@ button:hover {
 
 .searchBar-wrapper {
 	display: none;
-	@media screen and(988px<=width) {
+	@media screen and (width>=988px) {
 		display: flex;
 		width: 290px;
 		height: 44px;
@@ -1053,14 +1053,14 @@ button:hover {
 		box-sizing: border-box;
 	}
 
-	@media screen and(1078px<=width) {
+	@media screen and (width>=1078px) {
 		max-width: 350px;
 		width: 350px;
 	}
 }
 
 .searchBar {
-	@media screen and(988px<=width) {
+	@media screen and (width>=988px) {
 		width: 100%;
 		height: 100%;
 		border: none;
@@ -1106,7 +1106,7 @@ button:hover {
 
 .trending-wrapper {
 	display: none;
-	@media screen and(988px<=width) {
+	@media screen and (width>=988px) {
 		display: flex;
 		flex-direction: column;
 		width: 290px;
@@ -1119,7 +1119,7 @@ button:hover {
 		box-sizing: border-box;
 	}
 
-	@media screen and(1078px<=width) {
+	@media screen and (width>=1078px) {
 		max-width: 350px;
 		width: 350px;
 	}
@@ -1165,7 +1165,7 @@ button:hover {
 .follow-recommendations {
 	width: 100%;
 	display: none;
-	@media screen and(988px<=width) {
+	@media screen and (width>=988px) {
 		display: flex;
 		flex-direction: column;
 		background-color: rgb(247, 249, 249);
@@ -1212,24 +1212,24 @@ button:hover {
 
 .whiteSpace-right {
 	display: none;
-	@media screen and (989px<=width) {
+	@media screen and (width>=989px) {
 		display: flex;
 		flex: 1 0 auto;
 	}
 
-	@media screen and (1008px<=width) {
+	@media screen and (width>=1008px) {
 		display: flex;
 		width: 0px;
 		flex: 1 0 auto;
 	}
 
-	@media screen and (1025px<=width) {
+	@media screen and (width>=1025px) {
 		display: flex;
 		width: 8.5px;
 		flex: 1 0 auto;
 	}
 
-	@media screen and(1078px<=width) {
+	@media screen and (width>=1078px) {
 		width: 0px;
 		//max-width: 0px;
 		flex: 1 0 auto;
