--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -192,6 +192,7 @@ li {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		justify-content: space-between;
 		/* height: 100vh; */
 		margin: 0 0 4px 0;
 		/* border:solid red */
@@ -288,7 +289,7 @@ li {
 
 		@media only screen and (width>=500px) {
 			width: 60px;
-			height: 524.25px;
+			height: 582.5px;
 			flex-direction: column;
 			align-items: center;
 			margin: 2px 0 4px 0;
@@ -326,7 +327,7 @@ li {
 		@extend .nav_li;
 
 		@media only screen and (width>=500px) {
-			margin-top: 0;
+			/* margin-top: 0; */
 		}
 	}
 
@@ -378,7 +379,7 @@ li {
 		width: 26.25px;
 		height: 26.25px;
 		border-radius: 50%;
-		padding: 8px;
+		padding: 12px 8px;
 		overflow: visible;
 		@media screen and (width>=1265px) {
 			padding: 0;
@@ -414,6 +415,15 @@ button:hover {
 }
 
 .wrappers2 {
+
+	@media screen and (width>=500px) {
+		display: flex;
+		width: 100%;
+		height: 52px;
+		justify-content: center;
+		margin:4px 0;
+	}
+
 	@media screen and (width>=998px) {
 		display: flex;
 		width: 100%;
@@ -879,6 +889,7 @@ button:hover {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	height: 120px;
 	margin: 0;
 	padding: 4px 16px 0 16px;
 	box-sizing: border-box;
@@ -886,8 +897,10 @@ button:hover {
 
 	&_wrapper {
 		@extend .wrappers--flex;
-		padding: 0px 0 4px 0;
+		padding: 0;
 		box-sizing: border-box;
+		height: 56px;
+		margin-bottom: 4px;
 	}
 
 	&_profile-image-box {
@@ -907,9 +920,9 @@ button:hover {
 
 	&_tweet-input {
 		width: 100%;
-		height: 124px;
+		height: 56px;
 		display: flex;
-		padding: 18px 0 0 2px;
+		padding: 20px 0 0 2px;
 		box-sizing: border-box;
 		border: none;
 		font-size: 20px;
