--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1,16 +1,49 @@
 @font-face {
-	font-family: "chirp";
-	src: url("./assets/fonts/twitterChirpRegular.woff") format("woff");
+	font-family: "chirpLighter";
+	src: url("./assets/fonts/Chirp-Light.3a18e64a.woff2") format("woff2");
+	//font-weight: light;
 }
+
+@font-face {
+	font-family: "chirpLight";
+	src: url("./assets/fonts/twitterChirpRegular.woff") format("woff");
+	//font-weight: lighter;
+}
+
+@font-face {
+	font-family: "chirpRegular";
+	src: url("./assets/fonts/Chirp-Regular.80fda27a.woff2") format("woff2");
+	//font-weight: light;
+}
+
 @font-face {
 	font-family: "chirpMedium";
+	src: url("./assets/fonts/Chirp-Medium.f8e2739a.woff2") format("woff2");
+	//font-weight: light;
+}
+@font-face {
+	font-family: "chirpNormal";
 	src: url("./assets/fonts/twitterChirpMedium.woff") format("woff");
+	//font-weight: normal;
 	/* font-weight: bold; */
 }
 @font-face {
 	font-family: "chirpBold";
 	src: url("./assets/fonts/twitterChirpBold.woff") format("woff");
+	//font-weight: bold;
 	/* font-weight: 500; */
+}
+
+@font-face {
+	font-family: "chirpBold2";
+	src: url("./assets/fonts/Chirp-Bold.ebb56aba.woff2") format("woff2");
+	//font-weight: light;
+}
+
+@font-face {
+	font-family: "chirpHeavy";
+	src: url("./assets/fonts/Chirp-Heavy.f44ae4ea.woff2") format("woff2");
+	//font-weight: light;
 }
 
 :root {
@@ -97,6 +130,7 @@ li {
 	padding: 0;
 	overflow-x: hidden;
 	font-family: chirp;
+	font-weight: light;
 
 	@media only screen and (width>=500px) {
 		flex-direction: row;
@@ -136,7 +170,7 @@ li {
 		justify-content: space-between;
 		align-items: center;
 		top: 0;
-		overflow-x:hidden
+		overflow-x: hidden;
 	}
 	@media only screen and (width>=600px) {
 		padding: 0;
@@ -363,7 +397,8 @@ li {
 
 	&_a:focus {
 		.nav_text {
-			font-family: chirpBold;
+			font-family: chirp;
+			font-weight: bold;
 		}
 
 		g {
@@ -415,14 +450,13 @@ button:hover {
 }
 
 .wrappers2 {
-
 	@media screen and (width>=500px) {
 		display: flex;
 		width: 100%;
 		height: 52px;
 		justify-content: center;
 		align-items: center;
-		margin:4px 0;
+		margin: 4px 0;
 	}
 
 	@media screen and (width>=998px) {
@@ -435,12 +469,9 @@ button:hover {
 		width: 100%;
 	}
 
-
 	@media screen and (height>=795px) {
 		margin: 16px 0;
 	}
-
-
 }
 .tweet-circular-btn-container {
 	display: flex;
@@ -537,7 +568,8 @@ button:hover {
 			display: inline-block;
 			color: rgb(255, 255, 255);
 			font-size: 17px;
-			font-family: chirpBold;
+			font-family: chirp;
+			font-weight: bold;
 		}
 	}
 }
@@ -750,7 +782,8 @@ button:hover {
 
 		@media only screen and (width>=500px) {
 			display: inline-block;
-			font-family: chirpBold;
+			font-family: chirp;
+			font-weight: bold;
 			font-size: 20px;
 			margin-left: 16px;
 			font-weight: bold;
@@ -822,7 +855,7 @@ button:hover {
 	&_li {
 		display: flex;
 		flex-direction: column;
-		align-items: stretch;
+		align-items: center;
 		justify-content: center;
 		height: 100%;
 		flex: 1 0 auto;
@@ -846,7 +879,11 @@ button:hover {
 		color: rgb(83, 100, 113);
 		box-sizing: border-box;
 		div {
-			font-family: chirpMedium;
+			font-family: chirpLight;
+			font-weight: bold;
+			line-height: 20px;
+			letter-spacing: 0.15px;
+			//font-weight: normal;
 		}
 		.blue-focused-bar {
 			display: none;
@@ -858,7 +895,8 @@ button:hover {
 		padding: 16px 16px 0 16px;
 		box-sizing: border-box;
 		div {
-			font-family: chirpBold;
+			font-family: chirpMedium;
+			font-weight: 700;
 			color: black;
 			justify-self: center;
 			@media screen and (width>=500px) {
@@ -935,6 +973,7 @@ button:hover {
 		border: none;
 		font-size: 20px;
 		font-family: chirp;
+		font-weight: lighter;
 		resize: none;
 		outline: none;
 	}
@@ -1005,7 +1044,8 @@ button:hover {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		font-family: chirpBold;
+		font-family: chirp;
+		font-weight: bold;
 		font-size: 15px;
 		border-radius: 3rem;
 		width: 77.83px;
@@ -1132,13 +1172,13 @@ button:hover {
 	}
 }
 
-.getVerified-wrapper{
+.getVerified-wrapper {
 	display: none;
 	@media screen and (width>=988px) {
 		display: flex;
 		flex-direction: column;
 		width: 290px;
-		min-height:126px;
+		min-height: 126px;
 		background-color: rgb(247, 249, 249);
 		border: 1px solid white;
 		//margin-top: 3px;
@@ -1153,7 +1193,7 @@ button:hover {
 	}
 }
 
-.getVerified-container{
+.getVerified-container {
 	display: flex;
 	flex-direction: column;
 }
@@ -1183,7 +1223,8 @@ button:hover {
 		align-items: center;
 		height: 48px;
 		font-size: 20px;
-		font-family: chirpBold;
+		font-family: chirp;
+			font-weight: bold;
 		width: 100%;
 		width: 288px;
 		padding: 12px 16px;
@@ -1231,7 +1272,8 @@ button:hover {
 		align-items: center;
 		height: 48px;
 		font-size: 20px;
-		font-family: chirpBold;
+		font-family: chirp;
+			font-weight: bold;
 		width: 100%;
 		width: 288px;
 		padding: 12px 16px;
