--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -842,20 +842,23 @@ button:hover {
 
 	&_ul {
 		display: flex;
-		align-items: center;
+		align-items: stretch;
 		text-decoration: none;
 		list-style: none;
+		font-weight:500;
 		height: 100%;
 		width: 100%;
 		margin: 0;
 		padding: 0 0 0 0;
+		font-size:15px;
+		//flex:1 1 0;
 		box-sizing: border-box;
 		overflow-x: auto; //this allows for perfect alignment of the texts in this case
 	}
 	&_li {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		align-items: stretch;
 		justify-content: center;
 		height: 100%;
 		flex: 1 0 auto;
@@ -865,24 +868,40 @@ button:hover {
 		margin: 0;
 		box-sizing: border-box;
 		text-size-adjust: 100%;
+		//list-style-position: outside;
+		//flex-basis: auto;
 	}
 	&_anchor {
 		display: flex;
 		align-items: center;
-		height: 100%;
+		height: 53px;
 		width: 100%;
 		margin: 0;
 		padding: 0 16px;
 		justify-content: center;
+		flex-direction: column;
 		outline-style: none;
 		text-decoration: none;
 		color: rgb(83, 100, 113);
 		box-sizing: border-box;
+		font-stretch: 100%;
+		font-weight:400;
+		line-height: 20px;
+		text-align: start;
+		flex:1 0 auto;
 		div {
-			font-family: chirpLight;
-			font-weight: bold;
+			font-family: chirpMedium;
+			//font-weight: bold;
 			line-height: 20px;
-			letter-spacing: 0.15px;
+			display: block;
+			box-sizing: border-box;
+			font-size:15px;
+			font-weight: 500;
+			list-style-position: outside;
+			overflow-wrap: break-word;
+			text-align: start;
+
+			//letter-spacing: 0.15px;
 			//font-weight: normal;
 		}
 		.blue-focused-bar {
