--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1144,7 +1144,7 @@ button:hover {
 		width: 290px;
 		height: 44px;
 		min-height: 44px;
-		margin-bottom: 20px;
+		margin-bottom: 21px;
 		box-sizing: border-box;
 	}
 
@@ -1209,9 +1209,10 @@ button:hover {
 		background-color: rgb(247, 249, 249);
 		border: 1px solid white;
 		//margin-top: 3px;
-		margin-bottom: 14px;
+		margin-bottom: 16px;
 		border-radius: 17px;
-		//box-sizing: border-box;
+		box-sizing: border-box;
+
 	}
 
 	@media screen and (width>=1078px) {
@@ -1223,6 +1224,21 @@ button:hover {
 .getVerified-container {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
+	height:100%;
+	padding:12px 16px;
+
+
+	&_header{
+		font-family:chirp;
+		font-weight: 900;
+		font-size: 20px;
+	}
+
+	&_text{
+		font-size: 15px;
+		font-weight: 600;
+	}
 }
 
 .trending-wrapper {
@@ -1233,7 +1249,7 @@ button:hover {
 		width: 290px;
 		min-height: 500px;
 		background-color: rgb(247, 249, 249);
-		border: 1px solid white;
+		//border: 1px solid white;
 		//margin-top: 4.5px;
 		margin-bottom: 16px;
 		border-radius: 17px;
@@ -1247,6 +1263,7 @@ button:hover {
 
 	&_cards-header {
 		display: flex;
+		justify-content: start;
 		align-items: center;
 		height: 48px;
 		font-size: 20px;
@@ -1254,13 +1271,17 @@ button:hover {
 			font-weight: bold;
 		width: 100%;
 		width: 288px;
-		padding: 12px 16px;
+		padding: 12px 17px;
 		box-sizing: border-box;
 		span {
 			border: none;
+			min-width:178.281px;
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
+			font-weight: 800;
+			font-family: chirp;
+			//line-height: 24px;
 		}
 	}
 
