--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -7,7 +7,7 @@
 @font-face {
 	font-family: "chirp";
 	src: url("./assets/fonts/Chirp-Medium.f8e2739a.woff2") format("woff");
-	font-weight: 500 //medium;;
+	font-weight: 500; //medium;;
 }
 
 @font-face {
@@ -19,7 +19,7 @@
 @font-face {
 	font-family: "chirp";
 	src: url("./assets/fonts/Chirp-Heavy.f44ae4ea.woff2") format("woff2");
-	font-weight: 900 //heavy;;
+	font-weight: 900; //heavy;;
 }
 @font-face {
 	font-family: "chirp";
@@ -342,6 +342,10 @@ li {
 
 		@media only screen and (width>=500px) {
 			/* margin-top: 0; */
+			.nav_text:focus {
+			font-family: chirp;
+			font-weight: bold;
+		}
 		}
 	}
 
@@ -453,7 +457,7 @@ button:hover {
 		margin: 16px 0;
 	}
 }
-.tweet-circular-btn-container {
+.tweet-button-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -514,7 +518,7 @@ button:hover {
 		margin-left: 0;
 	}
 }
-.tweet-circular-btn-wrapper {
+.tweet-button-wrapper {
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -541,7 +545,7 @@ button:hover {
 		text-decoration: none;
 	}
 
-	&_pill-btn-text {
+	&_text {
 		display: none;
 
 		@media screen and (width>=1265px) {
@@ -1035,6 +1039,8 @@ button:hover {
 
 	&_li--first-item {
 		margin-left: -8px;
+		font-family: chirp;
+		font-weight: bold;
 	}
 
 	&_anchors {
@@ -1194,7 +1200,10 @@ button:hover {
 
 	&_input::placeholder {
 		font-size: 15px;
+		letter-spacing: normal;
 		text-align: left;
+		font-stretch:100%;
+		font-weight:400;
 	}
 }
 
@@ -1231,11 +1240,39 @@ button:hover {
 		font-family: chirp;
 		font-weight: 900;
 		font-size: 20px;
-	}
+	};
 
 	&_text {
 		font-size: 15px;
 		font-weight: 600;
+		height: 20px;
+	};
+
+	&_button-container{
+		//@extend .tweet-button-container
+		border:1px solid rgb(247, 249, 249);
+
+		height:36px;
+		box-sizing: border-box;
+		display:flex;
+		align-items: center
+
+	};
+
+	&_button-wrapper{
+		@extend .tweet-button-wrapper;
+		background-color: black;
+		height: 100%;
+		width: 120.16px;
+		padding: 0 16px;
+		box-sizing: border-box;
+	}
+
+	&_button-text{
+		@extend .tweet-button-wrapper_text;
+		font-size: 15px;
+		height: 20px;
+
 	}
 }
 
